--- a/index.html
+++ b/index.html
@@ -216,13 +216,13 @@
           </p>
         </div>
         <div class="image">
-          <img src="Khadar.jpg">
+          <img src="Khadar.jpg alt="khadar clear image">
         </div>
       </div>
       
       <div id="igusabsan">
         <div class="image">
-          <img src="Khadar.jpg">
+          <img src="Khadar.jpg" alt="khadar clear image">
         </div>
       
         <div class="contents">
