--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           </p>
         </div>
         <div class="image">
-          <img src="Khadar.jpg alt="khadar clear image">
+          <img src="Khadar.jpg" alt="khadar clear image">
         </div>
       </div>
       
