--- a/index.html
+++ b/index.html
@@ -272,13 +272,13 @@
           </p>
         </div>
         <div class="image">
-          <img src="khadar.jpg">
+          <img src="Khadar.jpg">
         </div>
       </div>
       
       <div id="igusabsan">
         <div class="image">
-          <img src="khadar.jpg">
+          <img src="Khadar.jpg">
         </div>
       
         <div class="contents">
