--- a/index.html
+++ b/index.html
@@ -241,6 +241,26 @@
     text-align:center;
     font-weight:bold;
   }
+    .row1{
+    display:flex;
+  }
+  .imgs{
+    padding:90px 20px 20px;
+    border-radius:20px;
+    margin:10px;
+    box-shadow: 1px 1px 20px #012290f7, 1px 1px 40px #012290f7;
+  }
+  .imgs img{
+    width:100%;
+  }
+  .imgs button{
+    align-items:center;
+    width:90%;
+  }
+  .imgs button a{
+    text-decoration:none;
+    width:100%;
+  }
   </style>
 </head>
 <body>
@@ -411,6 +431,21 @@
           
            <div id="project" class="sub">
              <h1>project<span>yada</span></h1>
+             <div class="row1">
+               <div class="imgs">
+                 <a href="todo.jpg"><img src="todo.jpg"></a>
+                 <button>Tijaabi</button>
+               </div>
+               <div class="imgs">
+                 <a href="app.jpg"><img src="app.jpg"></a>
+                 <button>Tijaabi</button>
+               </div>
+               <div class="imgs">
+                 <a href="clock.jpg"><img src="clock.jpg"></a>
+                 <button>Tijaabi</button>
+               </div>
+             </div>
+             </div>
            </div>
         
       </div>
