--- a/index.html
+++ b/index.html
@@ -288,6 +288,11 @@
           <p>Waxaan ahay web designer leh xirfad heer sare ah 8 bil 
             xirfadna u leh samaynta iyo qaabaynta websityada, front-end
             design iyo kuwo kle ...<br>
+            <div class="row">
+              <img src="whatsapp.jpg">
+              <img src="facebook.jpg">
+              <img src="linkedin.jpg">
+            </div>
             <button>More about me</button>
           </p>
         </div>
