--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
       localStorage.setItem('soundEnabled', 'true');
       audio.play().then(() => {
         audio.pause(); // Unlock autoplay
-        alert("Sound enabled! Next time it will auto-play.");
+        alert("codka hada wa la daary marka danbe aad so labato waxaad maqli doonta cod macaan");
       }).catch(err => {
         alert("Autoplay failed: " + err);
       });
