--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     text-align: center;
     color: white;
 }
+    .hero-content h1{
+  font-size:50px;
+}
+.hero-content p, a{
+  font-size:30px;
+}
 .btn {
     background-color: #ff4d4d;
     color: white;
