--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
   <div class="hero-content">
     <h1>Welcome to Khadar World</h1>
     <p>Kusoodhawoow Xalalka Halaburka Leh</p>
-    <a href="#" class="btn" onclick="akh()">Get Started</a>
+    <a href="#" class="btn" onclick="enableSound()">Get Started</a>
   </div>
 </section>
   
