--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div class="hero-content">
     <h1>Welcome to Khadar World</h1>
     <p>Kusoodhawoow Xalalka Halaburka Leh</p>
-    <a href="github.html" class="btn" onclick="akh()">Get Started</a>
+    <a href="github.html" class="btn">Get Started</a>
   </div>
 </section>
 </body>
