Update project images and buttons in index.html

--- a/index.html
+++ b/index.html
@@ -562,12 +562,12 @@ h2 {
              <h1>project<span>yada</span></h1>
              <div class="row1">
                <div class="imgs">
-                 <a href="todo.jpg"><img src="todo.jpg"></a>
-                 <button>Tijaabi</button>
+                 <a href="3d.jpg"><img src="3d.jpg"></a>
+                 <button><a href="https://khadarbogba.github.io/Portfolio1/">tijaabi</a>a></button>
                </div>
                <div class="imgs">
-                 <a href="app.jpg"><img src="app.jpg"></a>
-                 <button>Tijaabi</button>
+                 <a href="todo1.jpg"><img src="todo1.jpg"></a>
+                 <button><a href="https://khadarbogba.github.io/To-Do-list-note-app/">tijaabi</a></button>
                </div>
                <div class="imgs">
                  <a href="clock.jpg"><img src="clock.jpg"></a>
