--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         background:#081b29;
         color:white;
     }
-    
+    a{
+       color:white;
+    }
     .container{
       width:100%;
     }
