--- a/index.html
+++ b/index.html
@@ -568,11 +568,11 @@ h2 {
              <div class="row1">
                <div class="imgs">
                  <a href="3d.jpg"><img src="3d.jpg"></a>
-                 <button><a href="https://khadarbogba.github.io/Portfolio1/">tijaabi</a>a></button>
+                 <a href="https://khadarbogba.github.io/Portfolio1/"><button>tijaabi</button></a>
                </div>
                <div class="imgs">
                  <a href="todo1.jpg"><img src="todo1.jpg"></a>
-                 <button><a href="https://khadarbogba.github.io/To-Do-list-note-app/">tijaabi</a></button>
+                 <a href="https://khadarbogba.github.io/To-Do-list-note-app/"><button>tijaabi</button></a>
                </div>
                <div class="imgs">
                  <a href="clock.jpg"><img src="clock.jpg"></a>
