--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ h2 {
             ah oo hada waxa uu dono samayn kara waxan rabay in aan wax badan dhaho 
             lkin kuma fiicni sida darenka loo cabiro intaas hadan shegay
             ku filan soma aha ...<br>
-            <button><a href="3d.html">More about me 👉</a></button>
+            <button><a href="https://khadarbogba.github.io/Portfolio1/">More about me 👉</a></button>
           </p>
         </div>
       </div>
