--- a/index.html
+++ b/index.html
@@ -575,8 +575,8 @@ h2 {
                  <a href="https://khadarbogba.github.io/To-Do-list-note-app/"><button>tijaabi</button></a>
                </div>
                <div class="imgs">
-                 <a href="clock.jpg"><img src="clock.jpg"></a>
-                 <button>Tijaabi</button>
+                 <a href="showCase.jpg"><img src="clock.jpg"></a>
+                 <a href="https://khadarbogba.github.io/Show-case/"><button>Tijaabi</button></a>
                </div>
              </div>
            </div>
